# jiratest

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-push.yml  ci.yml  deploy.yml  test-integration.yml
blitzy/documentation/: Project Guide.md  Technical Specifications.md
config/: .env.example  ownership_rules.yaml  sanitization_patterns.yaml  severity_rules.yaml
deploy/terraform/: main.tf  outputs.tf  variables.tf
deploy/terraform/modules/ecs/: alb.tf  autoscaling.tf  main.tf  outputs.tf  variables.tf
deploy/terraform/modules/iam/: outputs.tf  task-execution-role.tf  task-role.tf  variables.tf
deploy/terraform/modules/redis/: main.tf  outputs.tf  variables.tf
deploy/terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
docs/: api.md  architecture.md  configuration.md  deployment.md  gcp-setup.md  monitoring.md  runbook.md  vercel-setup.md
src/app/: __init__.py  config.py
src/app/routes/: __init__.py  events.py  health.py  metrics.py
src/models/: __init__.py  error_event.py  jira_issue.py  severity_rule.py
src/services/: __init__.py  comment_rate_limiter.py  deduplication.py  fingerprinter.py  frequency_tracker.py  jira_integration.py  log_link_builder.py  ownership_resolver.py  payload_adapters.py  sanitizer.py  severity_engine.py
src/utils/: __init__.py  auth.py  logging_config.py  metrics_collector.py  secrets_manager.py
tests/: __init__.py  conftest.py
tests/integration/: test_deduplication.py  test_events_endpoint.py  test_jira_integration.py
tests/unit/: __init__.py  test_auth.py  test_comment_rate_limiter.py  test_deduplication.py  test_fingerprinter.py  test_frequency_tracker.py  test_jira_integration.py  test_log_link_builder.py  test_ownership_resolver.py  test_payload_adapters.py  test_sanitizer.py  test_severity_engine.py
